testing out university logo formatting to rectify spacing issues between university logos and university names in smartphone view

--- a/smartphone.css
+++ b/smartphone.css
@@ -191,7 +191,7 @@ header {
     margin-bottom: 20px;
 }
 
-.utd img,
+.utd,
 .uwg img {
     width: 7%;
     display: block;
